--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -13,25 +13,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Docker Setup
-        uses: docker/setup-buildx-action@v3
       
       - name: Docker Build
         uses: docker/build-push-action@v4
         with:
           context: .
           file: "Dockerfile-download"
-          tags: gigaohmbio-download
-          load: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: gigaohmbio-download:latest
           push: false
         
       - name: Docker Run
         uses: addnab/docker-run-action@v3
         with:
-          image: gigaohmbio-download
+          image: gigaohmbio-download:latest
           options: --rm -v ${{ github.workspace }}/data:/home/pn/app/data
       
       - name: Verify
