--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -33,6 +33,8 @@ jobs:
         shell: bash
         run: |
           ls -l ${{ github.workspace }}
+          chown 1000:1000 ${{ github.workspace }}/data
+          ls -l ${{ github.workspace }}
 
       - name: Docker Run
         uses: tj-actions/docker-run@v2
