--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -20,18 +20,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Get Host User Group
-        id: host
+      - name: Set Action Variables
+        id: avars
         shell: bash
         run: |
-          echo "hostgroup=`id -g`" >> $GITHUB_OUTPUT
           echo "hostuser=`id -u`" >> $GITHUB_OUTPUT
+          echo "hostgroup=`id -g`" >> $GITHUB_OUTPUT
+          echo "bindmountvol=data/`date +%Y%m%d-%H%M%S`" >> $GITHUB_OUTPUT
 
-      - name: Test Host User Group
+      - name: Test Action Variables
         shell: bash
         run: |
-          echo "hostgroup=${{ steps.host.outputs.hostgroup }}"
-          echo "hostuser=${{ steps.host.outputs.hostuser }}"
+          echo "hostuser=${{ steps.avars.outputs.hostuser }}"
+          echo "hostgroup=${{ steps.avars.outputs.hostgroup }}"
+          echo "bindmountvol=${{ steps.avars.outputs.bindmountvol }}"
 
       - name: Docker Build
         uses: docker/build-push-action@v4
@@ -42,23 +44,23 @@ jobs:
           tags: gigaohmbio-download:latest
           push: false
           build-args: |
-            UID=${{ steps.host.outputs.hostuser }}
-            GID=${{ steps.host.outputs.hostgroup }}
+            UID=${{ steps.avars.outputs.hostuser }}
+            GID=${{ steps.avars.outputs.hostgroup }}
 
       - name: Docker Run
         uses: tj-actions/docker-run@v2
         with:
           image: gigaohmbio-download:latest
           name: gigaohmbio-download-1
-          options: -v ${{ github.workspace }}/data:/home/pn/app/data
+          options: -v ${{ github.workspace }}/${{ steps.avars.outputs.bindmountvol }}:/home/pn/app/data
       
       - name: Verify
         id: verify
         shell: bash
         run: |
-          ls -l ${{ github.workspace }}/data
-          test `tail -1 ${{ github.workspace }}/data/log.txt` = "DOWNLOAD_OK"
-          echo "audiofile="$(echo "$(tail -2 ${{ github.workspace }}/data/log.txt)" | head -n 1)"" >> $GITHUB_OUTPUT
+          ls -l ${{ github.workspace }}/${{ steps.avars.outputs.bindmountvol }}
+          test `tail -1 ${{ github.workspace }}/${{ steps.avars.outputs.bindmountvol }}/log.txt` = "DOWNLOAD_OK"
+          echo "audiofile="$(echo "$(tail -2 ${{ github.workspace }}/${{ steps.avars.outputs.bindmountvol }}/log.txt)" | head -n 1)"" >> $GITHUB_OUTPUT
       
       - name: Output Test
         shell: bash
