--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -34,6 +34,7 @@ jobs:
           echo "hostuser=${{ steps.avars.outputs.hostuser }}"
           echo "hostgroup=${{ steps.avars.outputs.hostgroup }}"
           echo "bindmountvol=${{ steps.avars.outputs.bindmountvol }}"
+          mkdir -p ${{ steps.avars.outputs.bindmountvol }}
 
       - name: Docker Build
         uses: docker/build-push-action@v4
