--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -13,6 +13,10 @@ jobs:
     env:
       BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -83,11 +87,7 @@ jobs:
           debug: true
       
       - name: git push changes
-        uses: appleboy/git-push-action@v0.0.2
-        with:
-          branch: ${{ env.BRANCH_NAME }}
-          commit: true
-          commit_message: "[skip ci] download and whisper output - ${{ steps.avars.outputs.datapath }}"
-          remote: git@github.com:appleboy/whisper-action.git
-          ssh_key: ${{ secrets.DEPLOY_KEY }}
-          rebase: true
+          uses: ad-m/github-push-action@master
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            branch: ${{ env.BRANCH_NAME }}
