--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -21,8 +21,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ env.EVENT_BRANCH }}
-          persist-credentials: false
           fetch-depth: 0
 
       - name: Set up QEMU
@@ -95,7 +93,7 @@ jobs:
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git commit -a -m "Run updates ${{ steps.avars.outputs.datapath }}"
+          git commit -a -m "Update ${{ steps.avars.outputs.datapath }}"
 
       - name: Push Changes
         uses: ad-m/github-push-action@master
