--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -91,7 +91,8 @@ jobs:
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git commit -a -m "Update ${{ steps.avars.outputs.datapath }}"
+          git add ${{ steps.avars.outputs.datapath }}
+          git commit -m "Update ${{ steps.avars.outputs.datapath }}"
 
       - name: Push Changes
         uses: ad-m/github-push-action@master
