--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -79,15 +79,15 @@ jobs:
         run: |
           echo "audiopath=${{ github.workspace }}/${{ steps.avars.outputs.datapath }}/${{ steps.verify.outputs.audiofile }}" >> $GITHUB_OUTPUT
       
-#      - name: Whisper
-#        uses: appleboy/whisper-action@v0.1.1
-#        with:
-#          model: small
-#          audio_path: ${{ steps.dl_output.outputs.audiopath }}
-#          output_format: txt
-#          output_folder: ${{ github.workspace }}/${{ steps.avars.outputs.datapath }}
-#          print_segment: true
-#          debug: true
+      - name: Whisper
+        uses: appleboy/whisper-action@v0.1.1
+        with:
+          model: small
+          audio_path: ${{ steps.dl_output.outputs.audiopath }}
+          output_format: txt
+          output_folder: ${{ github.workspace }}/${{ steps.avars.outputs.datapath }}
+          print_segment: true
+          debug: true
       
       - name: Commit Updates
         shell: bash
