--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -37,13 +37,15 @@ jobs:
           echo "hostuser=`id -u`" >> $GITHUB_OUTPUT
           echo "hostgroup=`id -g`" >> $GITHUB_OUTPUT
           echo "datapath=data/`date +%Y%m%d-%H%M%S`" >> $GITHUB_OUTPUT
+          echo "previousurl=$(cat `ls -lARrt **/**/latest-video-url.txt | tail -1 | awk '{print $9}'`)"
 
-      - name: Test Action Variables
+      - name: Setup and Audit
         shell: bash
         run: |
           echo "hostuser=${{ steps.avars.outputs.hostuser }}"
           echo "hostgroup=${{ steps.avars.outputs.hostgroup }}"
           echo "datapath=${{ steps.avars.outputs.datapath }}"
+          echo "previousurl=${{ steps.avars.outputs.previousurl }}"
           mkdir -p ${{ steps.avars.outputs.datapath }}
 
       - name: Docker Build
@@ -64,14 +66,20 @@ jobs:
           image: gigaohmbio-download:latest
           name: gigaohmbio-download-1
           options: -v ${{ github.workspace }}/${{ steps.avars.outputs.datapath }}:/home/pn/app/data
+          args: ${{ steps.avars.outputs.previousurl }}
       
       - name: Verify
         id: verify
         shell: bash
         run: |
           ls -l ${{ github.workspace }}/${{ steps.avars.outputs.datapath }}
-          test `tail -1 ${{ github.workspace }}/${{ steps.avars.outputs.datapath }}/log.txt` = "DOWNLOAD_OK"
-          echo "audiofile="$(echo "$(tail -2 ${{ github.workspace }}/${{ steps.avars.outputs.datapath }}/log.txt)" | head -n 1)"" >> $GITHUB_OUTPUT
+          test `tail -1 ${{ github.workspace }}/${{ steps.avars.outputs.datapath }}/log.txt` = "DOWNLOAD_NONONO"
+          if [ $? -eq 0 ]; then
+            echo "audiofile="$(echo "$(tail -2 ${{ github.workspace }}/${{ steps.avars.outputs.datapath }}/log.txt)" | head -n 1)"" >> $GITHUB_OUTPUT
+          else
+            gh run cancel ${{ github.run_id }}
+            exit 1
+          fi
       
       - name: Download Output
         id: dl_output
